--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "devDependencies": {
     "concat-stream": "^1.5.0",
-    "ftp-test-server": "0.0.2",
-    "ftpd": "^0.2.15",
+    "ftpd": "git+https://github.com/C3realGuy/nodeftpd.git",
     "istanbul": "^0.3.22",
     "mocha": "^1.21.4",
     "mocha-istanbul": "0.2.0",
